<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_pass_security_msg"
        android:textColor="@color/text_hint"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/dialog_pass_old_hint"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_pill_grey"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/dialog_pass_new_hint"
        android:autofillHints="newPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_pill_grey"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/dialog_pass_confirm_hint"
        android:autofillHints="newPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_pill_grey"/>

</LinearLayout>